resources/dsaas-stg/dsaas-keycloak-preview/keycloak-sso.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    name: keycloak-server
  name: keycloak-sso
spec:
  host: sso.prod-preview.openshift.io
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: keycloak-server
    weight: 100
  wildcardPolicy: None
