resources/dsaas-stg/dsaas-keycloak-preview/osd-monitor.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    service: osd-monitor
  name: osd-monitor
spec:
  host: osd-monitor-dsaas-keycloak-preview.4c1c.dsaas-stg.openshiftapps.com
  port:
    targetPort: osd-monitor-webapi-guard
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: osd-monitor
    weight: 100
  wildcardPolicy: None
